# schematic

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .readthedocs.yml  .synapseConfig  CODE_OF_CONDUCT.md  CONTRIBUTION.md  DOCUMENTATION.md  Dataset.py  Dockerfile  FamilyHistory_manifest.csv  HTAN_schema.py  HTAPP_manifest_valid.csv  HTAPP_minimal_metadata_extension.py  LICENSE  ManifestGenerator.py  MetadataModel.py  README.md  RELEASE.md  SynapseStorage.py  bundle.py  certificate.conf  config.py  config.yml  config_example.yml  credentials.json  csv_2_schemaorg.py  definitions.py  dev-env.sh  dev.Dockerfile  docker-compose.yml  env.example  main.py  manifest.csv  manifest_generator.py  metadata_model_driver.py  metadata_model_test_driver.py  (+28 more)
.devcontainer/: Dockerfile  build-image.sh  devcontainer.json
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  jira_service_desk.md
.github/workflows/: api_test.yml  docker.yml  docker_build.yml  pdoc.yml  publish.yml  publish2.yml  publish_main.yml  publish_tag.yml  scan_repo.yml  test.yml  trigger-dca-deployment.yml
api/: README.md  __init__.py  routes.py
api/openapi/: api.yaml
aws/: Dockerfile
component_jsonschemas/example.model.column_type_component/: JSONSchemaComponent_validation_schema.json  TypeDefinitionComponent_validation_schema.json
data/: HTAN.jsonld  NFSchema.jsonld  NFSchemaReq.jsonld  README.md  analysis.json  array.json  cancer.json  chem.json  compoundScreen.json  curatedData.json  dhart.json  exampleSchemaReq.jsonld  experimentalData.json  genie.json  masterSage.jsonld  masterSageMoreRequirements.jsonld  masterSageTargetRequirements.jsonld  network.json  neuro.json  neurofibromatosis.json  ngs.json  partial_NFSchema  partial_NFSchemaReq  sageCommunity.json  tool.json  toolExtended.json
data-ingress-pipeline/metadata-model/: __init__.py
data-ingress-pipeline/misc/: misc.py
data-ingress-pipeline/schema-explorer/: __init__.py
data-ingress-pipeline/schema-generator/: __init__.py  schema_generator_module.py
data-ingress-pipeline/schema_explorer/: __init__.py
data-ingress-pipeline/schema_generator/: README.md  schema_generator_module.py  schema_generator_usage.py
data-ingress-pipeline/synapse-store/: __init__.py
data-ingress-pipeline/synapse_store/: __init__.py
data-ingress-pipeline/utils/: utils.py
data/csv/: HIV.csv  HIV.model.csv  HTAN.csv  example.csv
data/json_schema_logs/: json_schema_log.json
data/manifests/: HTAPP_manifest_invalid.csv  HTAPP_manifest_valid.csv  synapse_storage_manifest.csv
data/schema_org_schemas/: HIV.jsonld  HTAN.csv  HTAN.jsonld  biothings.jsonld
data/validation_schemas/: HTAN_validation_schema_FamilyHistory.json  example_validation_schema.json  minimalHTAPPJSONSchema.json  new_schema.jsonld
docs/: README.md  README.rst  conf.py  details.md  index.rst  manifest_generation_cli.md  manifest_validation_submission.md  requirements.txt  utils.py
docs/md/: details.md  manifest_generation_cli.md  manifest_validation_submission.md
docs/source/: api_tutorial.rst  asset_store.rst  cli_reference.rst  cli_tutorial.rst  conf.py  configuration.rst  generate.rst  index.rst  installation.rst  jsonschema_generation.rst  linkml.md  linkml.rst  manifest_generation.rst  manifest_submission.rst  manifest_validation.rst  submit.rst  troubleshooting.rst  tutorials.rst  utils.py  validate.rst  validation_rules.md  validation_rules.rst
examples/: csv_to_schemaorg.py  manifest_generator.py  metadata_model.py  rfc_to_data_model.py  schema_explorer.py  schema_generator.py  synapse_store.py
github_scripts/: construct_release_version.py  update_toml_version.py  utils.py
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: manifest_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  Manifest_test_suite.json  manifest_suite.json
ingresspipe/: README.md
ingresspipe/config/: __init__.py  config.py
ingresspipe/manifest/: README.md  __init__.py  generator.py
ingresspipe/models/: README.md  __init__.py  metadata.py
ingresspipe/schemas/: README.md  __init__.py  base.py  explorer.py  generator.py  json_schema_log.json  validator.py
ingresspipe/synapse/: README.md  __init__.py  store.py
ingresspipe/utils/: __init__.py  general.py  google_api_utils.py  io_utils.py  schema_utils.py  validate_utils.py  viz_utils.py
local_deployment/: README.md  docker-compose.yml
local_deployment/dca/: Dockerfile  README.md  dca_startup.sh  docker-compose.yml
local_deployment/schematic/: Dockerfile  README.md  docker-compose.yml  run_app.py
locustfile/: locustfile.py
notebooks/: data_curation_lifecycle.ipynb  empty_manifest_generation.ipynb  manifest_submission.ipynb  manifest_validation.ipynb
notebooks/files/: invalid_patient_manifest.csv  (+1 more)
schema_explorer/: __init__.py  base.py  curie.py  utils.py
schemas/: 18889969.json  18889969_RT_tool.json  HTAN.csv  HTAN.jsonld  HTAPP.jsonld  MDR.csv  MDR.jsonld  Test.csv  Test.jsonld  biothings_schema.jsonld  core.csv  exampleJSONSchema.json  masterSageJSONSchema.json  minimalHTAPPJSONSchema.json  nf_jsonschema.json  nf_jsonschema_validation_example.py  scRNA-seq.csv  scRNASeq.jsonld  scRNASeqJSONSchema.json  test_annotations.json
schematic/: __init__.py  __main__.py  configuration.py  exceptions.py  help.py  json_schema_functions.py  loader.py  temp.py  temp2.py  version.py
schematic_api/: Dockerfile
scripts/: Create, Load and Query Relational Database.ipynb  README.md  create_load_sql_db_nf.py  rfc_to_data_model.py  sql_query.py  sql_query_nf.py
setup/: README.md
test_data/: test.txt
test_manifest/: test_manifest.tsv
tests/: README.md  conftest.py  test_api.py  test_cli.py  test_configuration.py  test_ge_helpers.py  test_github_scripts.py  test_manifest.py  test_metadata.py  test_rdb.py  test_routes.py  test_schemas.py  test_sql.py  test_store.py  test_utils.py  test_validation.py  test_validator.py  test_viz.py  utils.py
upload_scripts/: local_toGS.py  local_toS3.py  local_toSyn.py
(+292 files in other folders)
