[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "schematicpy"
version = "24.2.1"
description = "Package for biomedical data model and metadata ingress management"
authors = [ "Milen Nikolov <milen.nikolov@sagebase.org>", "Lingling Peng <lingling.peng@sagebase.org>", "Mialy Defelice <mialy.defelice@sagebase.org>", "Gianna Jordan <gianna.jordan@sagebase.org>", "Bruno Grande <bruno.grande@sagebase.org>", "Robert Allaway <robert.allaway@sagebionetworks.org>",]
readme = "README.md"
homepage = "https://github.com/Sage-Bionetworks/schematic"
repository = "https://github.com/Sage-Bionetworks/schematic"
documentation = "https://github.com/Sage-Bionetworks/schematic"
keywords = [ "schema", "metadata", "validation", "data model", "linked data",]
classifiers = [ "Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: Science/Research", "Topic :: Software Development :: Libraries :: Python Modules",]
[[tool.poetry.packages]]
include = "schematic"

[tool.black]
line-length = 88
include = "\\.pyi?$"
exclude = "(\n  /(\n      \\.eggs\n    | \\.git\n    | \\.venv\n    | dist\n  )/\n)\n"

[tool.poetry.scripts]
schematic = "schematic.__main__:main"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
click = "^8.0.0"
click-log = "^0.4.0"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
graphviz = "^0.20.0"
inflection = "^0.5.1"
jsonschema = "^4.0.0"
networkx = ">=2.2.8"
numpy = "^1.21.1"
oauth2client = "^4.1.0"
pandas = "^2.0.0"
pygsheets = "^2.0.4"
PyYAML = "^6.0.0"
rdflib = "^6.0.0"
setuptools = "^66.0.0"
synapseclient = "^4.1.0"
tenacity = "^8.0.1"
toml = "^0.10.2"
great-expectations = "^0.15.0"
sphinx-click = "^4.0.0"
itsdangerous = "^2.0.0"
openpyxl = "^3.0.9"
pdoc = "^12.2.0"
dateparser = "^1.1.4"
pandarallel = "^1.6.4"
pyopenssl = "^23.0.0"
typing-extensions = "<4.6.0"
dataclasses-json = "^0.6.1"

[tool.poetry.extras]
api = [ "connexion", "Flask", "Flask-Cors", "Jinja2",]
aws = [ "uWSGI",]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
testpaths = [ "tests",]
filterwarnings = [ "ignore::DeprecationWarning",]
markers = [ "google_credentials_needed: marks tests requiring Google credentials (skipped on GitHub CI) ", "submission: tests that involve submitting manifests\n    ", "not_windows: tests that don't work on on windows machine\n    ", "schematic_api: marks tests covering API functionality (skipped on regular GitHub CI test suite)\n    ", "rule_combos: marks tests covering combinations of rules that aren't always necessary and can add significantly to CI runtime (skipped on GitHub CI unless prompted to run in commit message)\n    ", "table_operations: marks tests covering table operations that pass locally but fail on CI due to interactions with Synapse (skipped on GitHub CI)\n    ", "rule_benchmark: marks tests covering validation rule benchmarking\n    ", "synapse_credentials_needed: marks api tests that require synapse credentials to run\n    ", "empty_token: marks api tests that send empty credentials in the request\n    ",]

[tool.poetry.dependencies."backports.zoneinfo"]
markers = "python_version < \"3.9\""
version = "^0.2.1"

[tool.poetry.dependencies.schematic-db]
version = "0.0.41"
extras = [ "synapse",]

[tool.poetry.dependencies.connexion]
extras = [ "swagger-ui",]
version = "^2.8.0"
optional = true

[tool.poetry.dependencies.Flask]
version = "2.1.3"
optional = true

[tool.poetry.dependencies.Flask-Cors]
version = "^3.0.10"
optional = true

[tool.poetry.dependencies.uWSGI]
version = "^2.0.21"
optional = true

[tool.poetry.dependencies.Jinja2]
version = ">2.11.3"
optional = true

[tool.poetry.group.aws]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.5.1"
pytest-rerunfailures = "^12.0"
flake8 = "^6.0.0"
python-dotenv = "^0.21.0"
black = "^23.7.0"
mypy = "^1.4.1"
pylint = "^2.16.1"
pytest-xdist = "^3.5.0"
pre-commit = "^3.6.2"

[tool.poetry.group.aws.dependencies]
