[tool.poetry]
name = "schematicpy"
version = "23.11.1"
description = "Package for biomedical data model and metadata ingress management"
authors = [
    "Milen Nikolov <milen.nikolov@sagebase.org>",
    "Lingling Peng <lingling.peng@sagebase.org>",
    "Mialy Defelice <mialy.defelice@sagebase.org>",
    "Gianna Jordan <gianna.jordan@sagebase.org>",
    "Bruno Grande <bruno.grande@sagebase.org>",
    "Robert Allaway <robert.allaway@sagebionetworks.org>",
]

readme = "README.md"

homepage = "https://github.com/Sage-Bionetworks/schematic"
repository = "https://github.com/Sage-Bionetworks/schematic"
documentation = "https://github.com/Sage-Bionetworks/schematic"

# Additional keywords: annotation, knowledge graph, ontology, data ingress
keywords = ["schema", "metadata", "validation", "data model", "linked data"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

packages = [
    { include = "schematic" }
]

[tool.poetry.scripts]
schematic = "schematic.__main__:main"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.11"
click = "^8.0.0"
click-log = "^0.4.0"
google-api-python-client = "^2.0.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"
graphviz = "^0.20.0"
inflection = "^0.5.1"
jsonschema = "^4.0.0"
networkx = ">=2.2.8"
numpy = "^1.26.4"
oauth2client = "^4.1.0"  # Specified because of bug in version ^4.0.0
pandas = "^2.2.2"
pygsheets = "^2.0.4"
PyYAML = "^6.0.0"
rdflib = "^6.0.0"
setuptools = "^66.0.0"
synapseclient = "4.6.0"
tenacity = "^8.0.1"
toml = "^0.10.2"
great-expectations = "^0.15.0"
itsdangerous = "^2.0.0"
openpyxl = "^3.0.9"
"backports.zoneinfo" = {markers = "python_version < \"3.9\"", version = "^0.2.1"}
dateparser = "^1.1.4"
pandarallel = "^1.6.4"
pyopenssl = {version = "^23.0.0", optional = true}
dataclasses-json = "^0.6.1"
pydantic = "^1.10.4"
connexion = {extras = ["swagger-ui"], version = "^2.8.0", optional = true}
Flask = {version = "2.1.3", optional = true}
Flask-Cors = {version = "^3.0.10", optional = true}
uWSGI = {version = "^2.0.21", optional = true}
Jinja2 = {version = ">2.11.3", optional = true}
asyncio = "^3.4.3"
PyJWT = "^2.9.0"
typing-extensions = "4.12.2"
opentelemetry-api = {version = ">=1.21.0", optional = true}
opentelemetry-sdk = {version = ">=1.21.0", optional = true}
opentelemetry-exporter-otlp-proto-grpc = {version="^1.0.0", optional = true}
opentelemetry-instrumentation-flask = {version=">=0.48b0 ", optional = true}

[tool.poetry.extras]
api = ["connexion", "Flask", "Flask-Cors", "Jinja2", "pyopenssl", "opentelemetry-api", "opentelemetry-sdk", "opentelemetry-exporter-otlp-proto-grpc", "opentelemetry-instrumentation-flask"]
aws = ["uWSGI"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.5.1"
pytest-rerunfailures = "^12.0"
pytest-asyncio = "^0.24.0"
flake8 = "^6.0.0"
python-dotenv = "^0.21.0"
black = "^23.7.0" #If the version spec of black is changed here, the version specified in .pre-commit-config.yaml should be updated to match
mypy = "^1.4.1"
pylint = "^2.16.1"
pytest-xdist = "^3.5.0"
pre-commit = "^3.6.2"
typing-extensions = "4.12.2"

[tool.poetry.group.doc.dependencies]
pdoc = "^14.0.0"
sphinx = "7.3.7"
sphinx-click = "4.4.0"
typing-extensions = "4.12.2"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.venv
    | dist
  )/
)
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--verbose"
testpaths = [
    "tests"
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
